--- a/contrib_0.3/ChangeLog
+++ b/contrib_0.3/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-21  higepon  <higepon@users.sourceforge.jp>
+
+        * Multimedia/jpegls:V‹K’Ç‰Á 
+
 2005-08-17  bayside
 
         * Multimedia/monappt: V‹K’Ç‰Á
