--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,9 @@
+2005-08-19  bayside
+
+        * src/servers/process/main.cpp: ‚½‚Ü‚É—‚¿‚é‚½‚ßb’è‘Îôi‘‹}‚È‘Îô‹‚Şj
+
+        * src/lib/baygui/awt/Window.cpp: info.arg1 -> this->timerID
+
 2005-08-17  bayside
 
         * apps/non-gui/monappt: V‹K’Ç‰Á
