--- a/MonaNew/ChangeLog
+++ b/MonaNew/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-22  higepon  <higepon@users.sourceforge.jp>
+
+        * core/process_server/main.cpp (ExecuteFile): deleteバグ修正。
+
 2005-08-16  higepon  <higepon@users.sourceforge.jp>
 
         * core/kernel/MemoryAllocator.cpp: 追加。
