--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-22  higepon  <higepon@users.sourceforge.jp>
+
+        * src/servers/process/main.cpp : ƒoƒOC³B 
+
 2005-08-21  bayside
 
         * src/servers/shell/InternalCommands.cpp: mem’Ç‰Á
