--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-24  higepon  <higepon@users.sourceforge.jp>
+
+        * src/lib/jpegls/jpegls.cpp: decode_initで未初期化変数があったのでコンストラクタから呼ばないようにした。
+
 2005-08-22  higepon  <higepon@users.sourceforge.jp>
 
         * src/servers/process/main.cpp : バグ修正。 
