--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-26  higepon  <higepon@users.sourceforge.jp>
+
+        * src/kernel/core.asm :arch_save_thread_registers2で正しくスレッド情報が保存できていないバグを修正。(thanks Philip Lawatsch)
+
 2005-08-24  higepon  <higepon@users.sourceforge.jp>
 
         * src/lib/jpegls/jpegls.cpp: decode_initで未初期化変数があったのでコンストラクタから呼ばないようにした。
