--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-29  higepon  <higepon@users.sourceforge.jp>
+
+        * src/kernel/core.asm (from_user): ds,esの復帰をiretd直前に。
+
 2005-08-26  higepon  <higepon@users.sourceforge.jp>
 
         * src/kernel/core.asm :arch_save_thread_registers2で正しくスレッド情報が保存できていないバグを修正。(thanks Philip Lawatsch)
