--- a/MonaNew/ChangeLog
+++ b/MonaNew/ChangeLog
@@ -1,3 +1,7 @@
+2005-09-07  higepon  <higepon@users.sourceforge.jp>
+
+        * core/kernel/Process.cpp (AllocateMemory): なんとなく実装中
+
 2005-09-06  bayside
 
         * core/monapi2/Makefile: Monapi2ビルド用に用意
