--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,13 @@
+2005-09-27  bayside
+
+        * src/include/java: V‹K’Ç‰Á
+
+        * src/include/sms_gc: V‹K’Ç‰Á
+
+        * src/lib/java: V‹K’Ç‰Á
+
+        * src/lib/sms_gc: V‹K’Ç‰Á
+
 2005-09-23  bayside
 
         * samples/non-gui/gcj: V‹K’Ç‰Á
