*** empty log message ***

--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,8 +1,8 @@
 2005-09-27  bayside
 
-        * src/include/java: V‹K’Ç‰Á
+        * include/java: V‹K’Ç‰Á
 
-        * src/include/sms_gc: V‹K’Ç‰Á
+        * include/sms_gc: V‹K’Ç‰Á
 
         * src/lib/java: V‹K’Ç‰Á
 
