--- a/MonaNew/ChangeLog
+++ b/MonaNew/ChangeLog
@@ -1,3 +1,8 @@
+2005-10-31  higepon  <higepon@users.sourceforge.jp>
+
+        * core/monapi: new‚Å size 0‚ÌŠ„‚è“–‚Ä‚É‘Î‰
+                       delete ‚Å NULL ‚ğ‹–—e‚·‚é
+
 2005-10-26  higepon  <higepon@users.sourceforge.jp>
 
         * core/kernel/Scheduler.cpp (LookupMainThread): ‚ğ’Ç‰ÁB
