--- a/MonaNew/ChangeLog
+++ b/MonaNew/ChangeLog
@@ -1,3 +1,7 @@
+2005-12-07  higepon  <higepon@users.sourceforge.jp>
+
+        * core/pe_server/main.cpp : パッチの取り込みがもれていたので取り込み
+
 2005-11-17  higepon  <higepon@users.sourceforge.jp>
 
         * core/monapi/Message.cpp (create): Messageのコピーに問題があったので修正
