--- a/MonaNew/ChangeLog
+++ b/MonaNew/ChangeLog
@@ -1,3 +1,7 @@
+2005-12-11  higepon  <higepon@users.sourceforge.jp>
+
+        * core/monapi/Makefile: dependencies‚ª‚È‚¢ê‡‚É‘Îˆ
+
 2005-12-07  higepon  <higepon@users.sourceforge.jp>
 
         * core/pe_server/main.cpp : ƒpƒbƒ`‚Ìæ‚è‚İ‚ª‚à‚ê‚Ä‚¢‚½‚Ì‚Åæ‚è‚İ
