--- a/contrib_0.3/ChangeLog
+++ b/contrib_0.3/ChangeLog
@@ -1,3 +1,7 @@
+2005-12-13  bayside
+
+        * Makefile: Mesa, Mesa-gears, helloworld ‚ğ’Ç‰Á
+
 2005-12-09  higepon  <higepon@users.sourceforge.jp>
 
         * tmpmonalibc,Mesa,Mesa-gears‚Ìæ‚è‚İ
