*** empty log message ***

--- a/contrib_0.3/ChangeLog
+++ b/contrib_0.3/ChangeLog
@@ -2,6 +2,10 @@
 
         * Makefile: Mesa, Mesa-gears, helloworld ‚ğ’Ç‰Á
 
+        * Net/libnicdrv: V‹K’Ç‰Á
+
+        * Sysutils/libPci: V‹K’Ç‰Á
+
 2005-12-09  higepon  <higepon@users.sourceforge.jp>
 
         * tmpmonalibc,Mesa,Mesa-gears‚Ìæ‚è‚İ
