*** empty log message ***

--- a/contrib_0.3/ChangeLog
+++ b/contrib_0.3/ChangeLog
@@ -1,3 +1,7 @@
+2006-01-03  higepon  <higepon@users.sourceforge.jp>
+
+        * uip For Mona‚ğæ‚è‚İB
+
 2005-12-13  bayside
 
         * Makefile: Mesa, Mesa-gears, helloworld ‚ğ’Ç‰Á
