--- a/MonaNew/ChangeLog
+++ b/MonaNew/ChangeLog
@@ -1,3 +1,7 @@
+2006-01-03  higepon  <higepon@users.sourceforge.jp>
+
+        * tool/fat_write/types.h: _TYPES_H_がMSys環境で被るため __TYPES_H_にリネーム
+
 2005-12-13  bayside
 
         * tool/mkimg/mkimg.pl: FDイメージにはライブラリを入れないように修正
