--- a/contrib_0.3/ChangeLog
+++ b/contrib_0.3/ChangeLog
@@ -1,3 +1,7 @@
+2005-03-22  bayside
+
+        * Net/monadat: SHELL.EX5だとCUIシェルと名前がかぶるのでMSHELL.EX5に変更した
+
 2006-03-12  higepon  <higepon@users.sourceforge.jp>
 
         * Graphics/libbaygui/awt/Scrollbar.cpp: enabled=falseのときはイベントを受け付けないようにした。(baysideさんに相談済み)
