--- a/contrib_0.3/ChangeLog
+++ b/contrib_0.3/ChangeLog
@@ -4,6 +4,10 @@
 
         * Graphics/Mesa: ソースファイルを http://www.monaos.org/mesa から取得するように修正
 
+        * Graphics/jpegview: jpegdemo は名前が紛らわしいので修正
+
+        * Emulators/infones: Games 以下よりはこっちがふさわしいので移動
+
 2006-03-12  higepon  <higepon@users.sourceforge.jp>
 
         * Graphics/libbaygui/awt/Scrollbar.cpp: enabled=falseのときはイベントを受け付けないようにした。(baysideさんに相談済み)
