--- a/contrib_0.3/ChangeLog
+++ b/contrib_0.3/ChangeLog
@@ -1,3 +1,7 @@
+2005-03-22  Yamami
+
+        * Sysutils/libPci: ローカル変数のポインターを返している問題を修正
+
 2005-03-22  bayside
 
         * Net/monadat: 起動しない不具合修正
