*** empty log message ***

--- a/MonaNew/ChangeLog
+++ b/MonaNew/ChangeLog
@@ -1,3 +1,7 @@
+2006-04-04  higepon  <higepon@users.sourceforge.jp>
+
+        * file_server/file.cpp Yume‚³‚ñ‚Ìƒpƒbƒ`‚ğæ‚è‚Ş
+
 2006-03-26  higepon  <higepon@users.sourceforge.jp>
 
         * fat_write‚ğautotools‚É‘Î‰
