--- a/mona/ChangeLog
+++ b/mona/ChangeLog
@@ -1,3 +1,7 @@
+2006-05-09 hiratch <hiratch@users.sourceforge.jp>
+
+	* chmod +x configure
+
 2006-05-08 hiratch <hiratch@users.sourceforge.jp>
 
 	* configure, Makefile.new: 新ビルドシステム。configure を実行後、
