--- a/contrib/ChangeLog
+++ b/contrib/ChangeLog
@@ -1,3 +1,7 @@
+2006-08-16  higepon  <higepon@users.sourceforge.jp>
+
+        * Graphics/jpegview/jpegview.cpp (MonaMain): new-file-server‘Î‰ž
+
 2006-07-26  higepon  <higepon@users.sourceforge.jp>
 
         * Makefile: if MONADIR not set, use default
