--- a/mona/ChangeLog
+++ b/mona/ChangeLog
@@ -1,3 +1,7 @@
+2006-08-18  higepon  <higepon@users.sourceforge.jp>
+
+        * stlport‚ğcontrib/Devel‚©‚ç mona/tool/stlport‚ÉˆÚ“®B
+
 2006-08-15  higepon  <higepon@users.sourceforge.jp>
 
         * core/pe_server/main.cpp (OpenPE): file_server_on_linux—p‚É®‚¦‚½
