--- a/contrib/ChangeLog
+++ b/contrib/ChangeLog
@@ -1,3 +1,7 @@
+2006-08-18  higepon  <higepon@users.sourceforge.jp>
+
+        * Devel/stlport‚ð mona/tool/stlport‚ÉˆÚ“®
+
 2006-08-16  higepon  <higepon@users.sourceforge.jp>
 
         * Graphics/jpegview/jpegview.cpp (MonaMain): new-file-server‘Î‰ž
